bin/testsuite/tests/compiler/src/errors/compiler2727.swg
#global testerror "Err0531"

func toto() {}

#test
{
    discard toto()
}
